--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #1E1E1E;
+    background-color: #008000;
     color: #FFFFFF;
 }
 
