--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #2C2C2C;
+    background-color: #9999ff;
     padding: 20px;
     text-align: center;
 }
@@ -38,7 +38,7 @@ nav ul li a {
 }
 
 .profile-card {
-    background-color: #3C3C3C;
+    background-color: #9999ff;
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
@@ -57,7 +57,7 @@ nav ul li a {
 }
 
 .profile-card button {
-    background-color: #FF4C4C;
+    background-color: #ffffff;
     border: none;
     border-radius: 5px;
     color: #FFFFFF;
