--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav ul li a {
 }
 
 .profile-card button {
-    background-color: #ffffff;
+    background-color: #d7d7ff;
     border: none;
     border-radius: 5px;
     color: #FFFFFF;
