--- a/style.css
+++ b/style.css
@@ -72,5 +72,5 @@ nav ul li a {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #2C2C2C;
+    background-color: #99ccff;
 }
