--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav ul li a {
    background-image: url('hero-bg.jpg');
    background-size: cover;
    background-position: center;
-   color: #f4f4f4;
+   color: #c16407;
    padding: 5rem 0;
    text-align: center;
 }
