--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
    color: #333;
 }
 header {
-   background-color: #28a745;
+   background-color: #568e0a;
    padding: 1rem 0;
    text-align: center;
 }
