--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
    color: #333;
 }
 header {
-   background-color: #568e0a;
+   background-color: #28a745;
    padding: 1rem 0;
    text-align: center;
 }
@@ -34,7 +34,7 @@ nav ul li a {
    background-image: url('hero-bg.jpg');
    background-size: cover;
    background-position: center;
-   color: #c16407;
+   color: #E3E3E3;
    padding: 5rem 0;
    text-align: center;
 }
