--- a/style.css
+++ b/style.css
@@ -1,146 +1,30 @@
-Style.css Buchereautek
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: white;
-    color: black;
-    margin: 0;
-    padding: 0;
+body{}
+header{
+  border: solid 2px #345;
+}
+#banier{
+  border: solid 2px red;
+  min-height: 200px;
 }
 
-header {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    text-align: center;
+#zone_rch{
+  border: solid 2px green;
+   min-height: 80px;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
+#cont{
+  border: solid 2px #9AC;
+   //min-height: 350px;
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
+#resultat{
+  border: solid 2px #5F2;
+   min-height: 350px;
+  width: 50%;
+  margin: auto;
 }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    }
-
-h1, h3, h5 {
-    margin: 10px 0;
-    text-align: center;
-}
-
-h2{
-  position: relative;
-  top: 1px;
-  left: 800px;
-  height: auto;
-  width: 100px;
-  down: 10px;
-  margin: 100px ;
-}
-
-main {
-    padding: 20px;
-}
-
-.article {
-    border: 1px solid black;
-    margin: 20px 0;
-    padding: 20px;
-    text-align: center;
-}
-
-.article img {
-    max-width: 100%;
-    height: auto;
-    align: center;
-}
-
-.btn-acheter{
-    background-color: black;
-    color: white;
-    border: none;
-  border-radius: 15px;
-  front-size: 20px;
-  front-weight: bold;
-    padding: 10px 15px;
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.btn-acheter:hover{
-    background-color: green;
-}
-
-.btn-acheter::after{
-    content: "";
-    background: red;
-    position: absolute;
-    z-index: -1;
-    left: -15%;
-    rigths: -15%;
-    top: 0;
-    bottom: 0;
-    transform: skewX(-45deg) scale(0,1);
-}
-
-.btn-acheter:active{
-  transform: translate(3px);
-  box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
-  color: white;
-}
-
-.btn-hautdepage{
-    background-color: black;
-    color: white;
-    border: none;
-  border-radius: 15px;
-  front-size: 20px;
-  front-weight: bold;
-    padding: 10px 15px;
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.btn-hautdepage:hover{
-    background-color: grey;
-}
-
-.btn-hautdepage::after{
-    content: "";
-    background: red;
-    position: absolute;
-    z-index: -1;
-    left: -15%;
-    rigths: -15%;
-    top: 0;
-    bottom: 0;
-    transform: skewX(-50deg) scale(0,1);
-}
-
-.btn-hautdepage:active{
-  transform: translate(3px);
-  box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
-  color: white;
-}
-
-
-footer {
-    background-color: black;
-    color: white;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding: 10px 0;
+footer{
+  border: solid 2px red;
+   min-height: 30px;
 }
