--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body { 
   font-family: Arial, sans-serif;
   background-color: #0033cc;
-  color: white;
+  color: with;
   display: flex;
   flex-direction: column;
   align-items:center;
@@ -22,16 +22,12 @@ header {
   padding: 20px;
 } 
 .logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  background-color: #0066ff;
   width: 15px;
   height: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  color: white;
+  border-radius: 60%;
 } 
 nav a {
   margin: 0 15px;
