--- a/style.css
+++ b/style.css
@@ -104,6 +104,58 @@
             padding-right: 25px;
         }
 
+        .article {
+            border: 1px solid black;
+            margin: 20px 0;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .article img {
+            max-width: 100%;
+            height: auto;
+            align: center;
+            font-family: Arial Black, sans-serif;
+            font-weight: bold;
+        }
+.btn-acheter{
+    background-color: black;
+    color: white;
+    border: none;
+  border-radius: 15px;
+  front-size: 20px;
+  front-weight: bold;
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.btn-acheter:hover{
+    background-color: green;
+}
+
+.btn-acheter::after{
+    content: "";
+    background: red;
+    position: absolute;
+    z-index: -1;
+    left: -15%;
+    rigths: -15%;
+    top: 0;
+    bottom: 0;
+    transform: skewX(-45deg) scale(0,1);
+}
+
+.btn-acheter:active{
+  transform: translate(3px);
+  box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
+  color: white;
+}
+
+
+
 
 
 
