--- a/style.css
+++ b/style.css
@@ -153,6 +153,41 @@
   box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
   color: white;
 }
+.btn-hautdepage{
+    background-color: black;
+    color: white;
+    border: none;
+  border-radius: 15px;
+  front-size: 20px;
+  front-weight: bold;
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.btn-hautdepage:hover{
+    background-color: grey;
+}
+
+.btn-hautdepage::after{
+    content: "";
+    background: red;
+    position: absolute;
+    z-index: -1;
+    left: -15%;
+    rigths: -15%;
+    top: 0;
+    bottom: 0;
+    transform: skewX(-50deg) scale(0,1);
+}
+
+.btn-hautdepage:active{
+  transform: translate(3px);
+  box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
+  color: white;
+}
 
 
 
