--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@
   color: white;
 }
 .btn-hautdepage{
-    background-color: black;
+    background-color: none;
     color: white;
     border: none;
   border-radius: 15px;
