--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
         box-sizing: border-box;
         } 
         body { 
+          height: auto
           font-family: Arial, sans-serif;
           background-color: #0033cc;
           color: with;
@@ -189,6 +190,46 @@
   color: white;
 }
 
+.agd:hover{
+    background-color: #EE82EE;
+}
+.agd_image:active{
+  transform: translate(3px);
+  box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
+  color: white;
+}
+
+#Article 2{
+  width: 100px;
+  height: 100px;
+}
+
+#Article 1{
+  width: 100px;
+  height: 100px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -244,7 +285,7 @@
     border: 3px solid #ffffff; 
   }
   
-  ::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-hover {
     background: linear-gradient(45deg, #ff69b4, #ff4500, #32cd32, #1e90ff, #9370db, #ff1493, #00ced1);
   }
   
