--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
         box-sizing: border-box;
         } 
         body { 
-          height: auto
+          height: auto;
           font-family: Arial, sans-serif;
           background-color: #0033cc;
           color: with;
