--- a/style.css
+++ b/style.css
@@ -199,12 +199,7 @@
   color: white;
 }
 
-#Article 2{
-  width: 100px;
-  height: 100px;
-}
-
-#Article 1{
+.im{
   width: 100px;
   height: 100px;
 }
