--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@
             font-weight: bold;
         }
 .btn-acheter{
-    background-color: black;
+    background-color: none;
     color: white;
     border: none;
   border-radius: 15px;
