--- a/style.css
+++ b/style.css
@@ -206,8 +206,8 @@
     background-color: none;
 }
 .image-container img{
-  width: auto;
-  height: auto;
+  width: 40px;
+  height: 40px;
   horizontal-align: top;
   background-color: none;
 }
