--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
           font-size: 10rem;
           line-height: 1;
           margin-left: 0;
+           color: #99ccff;
           
         } 
 
