--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
             text-align: center;
         }
 
-        .article img {
+        .article imga {
             max-width: 90%;
             height: auto;
             align-items: center;
