--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
         .title .lane {
           color: #4d79ff;
         } 
-        .image img {
+        .image imga {
           width: 320px;
           height: auto;
           margin-top: 20px; 
