--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@
         }
 
         .article img {
-            max-width: 90%;
-            height: auto;
+            width: 50px;
+            height: 50px;
             align-items: center;
             font-family: Arial Black, sans-serif;
             font-weight: bold;
