--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
         } 
         .image img {
           width: 20px;
-          height: auto;
+          height: 20px;
           margin-top: 20px; 
         }
 
