--- a/style.css
+++ b/style.css
@@ -200,12 +200,11 @@
 }
 
 .container{
-  display: inline-block;
+  display: block;
     width: 50px;
     height: 50px;
-  justify-content: space-between;
-  align-item: left;
-    background-color: none;
+  justify-content: space-around;
+  align: left;
 }
 .container img{
   width-max: 40px;
