--- a/style.css
+++ b/style.css
@@ -200,9 +200,7 @@
 }
 
 .container{
-    width: 50px;
-    height: 50px;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .container img{
   width-max: 40px;
