--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
         }
 
         .article {
-            margin: 20px 0;
+            margin: 20px;
             padding: 20px;
             text-align: center;
             width-max: 40px;
@@ -117,7 +117,7 @@
         .article img {
             width: 50px;
             height: 50px;
-            align-items: left;
+            align-items: center;
         }
 .btn-acheter{
     background-color: #0033cc;
