--- a/style.css
+++ b/style.css
@@ -55,13 +55,14 @@
           margin-bottom: 20px;
           font-family: Arial Black, sans-serif;
           font-weight: bold;
+           color: #99ccff;
         } 
         .quote .author { 
           display: block;
           margin-top: 10px;
           font-size: 0.9rem;
-          color: #99ccff;
         } 
+#q { color: #99ccff; }
 
        
         .title h1 {
