--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@
           margin-bottom: 20px;
           font-family: Arial Black, sans-serif;
           font-weight: bold;
-           color: #99ccff;
+           color: #4d79ff;
         } 
         .quote .author { 
           display: block;
           margin-top: 10px;
           font-size: 0.9rem;
         } 
-#q { color: #99ccff; }
+#q { color: ##4d79ff; }
 
        
         .title h1 {
