--- a/style.css
+++ b/style.css
@@ -202,10 +202,12 @@
 
 .article {
    color: #4d79ff;
+   text-align: center;
 }
 
 h3.3, 3.2, 3.1 {
    color: #4d79ff;
+   text-align: center;
 }
 
 
