--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@
             align-items: center;
         }
 .btn-acheter{
-    background-color: #0033cc;
+    background-color: #99ccff;
     color: white;
     border: none;
   border-radius: 15px;
