--- a/style.css
+++ b/style.css
@@ -204,21 +204,13 @@ h3.3, 3.2, 3.1 {
    text-align: center;
     position: absolut;
 }
-.article 1{ 
+.article &{ 
    color: #99ccff;
    text-align: center;
    width: 150px;
-   height: 100px;}
-.article 2{ 
-   color: #99ccff;
-   text-align: center;
-   width: 150px;
-   height: 100px;}
-.article 3{ 
-   color: #99ccff;
-   text-align: center;
-   width: 150px;
-   height: 100px;}
+   height: 100px;
+}
+
 
 
 
