--- a/style.css
+++ b/style.css
@@ -205,8 +205,8 @@ h3.3, 3.2, 3.1 {
     position: absolut;
 }
 .article &{ 
-   color: #99ccff;
-   text-align: center;
+   display: block;
+    margin: auto;
    width: 150px;
    height: 100px;
 }
