--- a/style.css
+++ b/style.css
@@ -209,6 +209,9 @@ h3.3, 3.2, 3.1 {
     justify-content: center; /* Centre l'image horizontalement */
     align-items: center;     /* Centre l'image verticalement */
     height: 50vh;           /* Hauteur de l'écran si nécessaire */
+      text-align: center;
+      width: 100px;
+       height: 100px;
 }
 
 
