--- a/style.css
+++ b/style.css
@@ -219,8 +219,8 @@ h3.3, 3.2, 3.1 {
     align-items: center;     /* Centre l'image verticalement */
     height: 5vh;           /* Hauteur de l'écran si nécessaire */
       text-align: center;
-      width: 10px;
-       height: 10px;
+   width: 20%; /* 50% de la largeur de son conteneur */
+   height: auto; /* Garde les proportions de l'image */
 }
 .container3 {
     display: wrap; 
@@ -228,8 +228,8 @@ h3.3, 3.2, 3.1 {
     align-items: center;     /* Centre l'image verticalement */
     height: 5vh;           /* Hauteur de l'écran si nécessaire */
       text-align: center;
-      width: 10px;
-       height: 10px;
+     width: 20%; /* 50% de la largeur de son conteneur */
+    height: auto; /* Garde les proportions de l'image */
 }
 
 
