--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ h3.3, 3.2, 3.1 {
    text-align: center;
     position: absolut;
 }
-.container {
+.container img{
     display: wrap; 
     justify-content: center; /* Centre l'image horizontalement */
     align-items: center;     /* Centre l'image verticalement */
@@ -213,7 +213,7 @@ h3.3, 3.2, 3.1 {
       width: 100px;
        height: 100px;
 }
-.container2{
+.container2 img{
     display: wrap; 
     justify-content: center; /* Centre l'image horizontalement */
     align-items: center;     /* Centre l'image verticalement */
@@ -222,7 +222,7 @@ h3.3, 3.2, 3.1 {
    width: 20%; /* 50% de la largeur de son conteneur */
    height: auto; /* Garde les proportions de l'image */
 }
-.container3 {
+.container3 img{
     display: wrap; 
     justify-content: center; /* Centre l'image horizontalement */
     align-items: center;     /* Centre l'image verticalement */
