--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@
    height: 100px;
 }
 
-h3.3, 3.2, 3.1 {
+h3.3, h3.2, h3.1 {
    color: #EE82EE;
    text-align: center;
     position: absolut;
