--- a/style.css
+++ b/style.css
@@ -219,8 +219,8 @@ h3.3, h3.2, h3.1 {
     align-items: center;     /* Centre l'image verticalement */
     height: 100vh;           /* Hauteur de l'écran si nécessaire */
       text-align: center;
-   width: 20%; /* 50% de la largeur de son conteneur */
-   height: auto; /* Garde les proportions de l'image */
+   width: 40%; /* 50% de la largeur de son conteneur */
+   height: 50%; /* Garde les proportions de l'image */
 }
 .container3 img{
     display: wrap; 
@@ -228,8 +228,8 @@ h3.3, h3.2, h3.1 {
     align-items: center;     /* Centre l'image verticalement */
     height: 100vh;           /* Hauteur de l'écran si nécessaire */
       text-align: center;
-     width: 20%; /* 50% de la largeur de son conteneur */
-    height: auto; /* Garde les proportions de l'image */
+     width: 40%; /* 50% de la largeur de son conteneur */
+    height: 50%; /* Garde les proportions de l'image */
 }
 
 
