--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ h3, h4, h5{
     height: 50vh;           /* Hauteur de l'écran si nécessaire */
       width: 100px;
        height: 100px;
+   margin-left: 10px;
 }
 .container2 img{
     display: wrap; 
@@ -227,6 +228,7 @@ h3, h4, h5{
     height: 100vh;           /* Hauteur de l'écran si nécessaire */
    width: 40%; /* 50% de la largeur de son conteneur */
    height: 50%; /* Garde les proportions de l'image */
+   margin-left: 10px;
 }
 .container3 img{
     display: wrap; 
@@ -235,6 +237,7 @@ h3, h4, h5{
     height: 100vh;           /* Hauteur de l'écran si nécessaire */
      width: 40%; /* 50% de la largeur de son conteneur */
     height: 50%; /* Garde les proportions de l'image */
+   margin-left: 10px;
 }
 p {
    color:#99ccff;
